# pvr.iptvsimple

./: CMakeLists.txt
debian/: changelog.in  control  copyright  rules
pvr.iptvsimple/: addon.xml
src/: PVRIptvData.h  client.cpp  client.h
